--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=msprodutos
+spring.application.name=msproduto
 server.port=8001
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
