porta dinâmica com gateway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=msproduto
-server.port=8001
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+#server.port=8001
+server.port=${PORT:0}
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
